<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegistroDosFragment"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/blancoAla"
            app:liftOnScroll="true"/>

        <View style="@style/divider"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/ingrese_su_telefono"
                app:boxStrokeColor="#7400E8"
                app:boxStrokeWidth="10dp"
                app:helperText="@string/obligatorio"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorIcons"
                    android:inputType="number"
                    android:padding="16dp">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <View style="@style/divider"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:textColor="@color/itemCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/servicio_que_brindara"
            android:textSize="17sp"
            android:textStyle="bold"
           android:layout_margin="16dp"/>


        <com.google.android.material.chip.ChipGroup

            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:chipSpacing="16dp">


            <com.google.android.material.chip.Chip
                android:id="@+id/chip_albanil"
                style="@style/chipTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/albanil"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_aire_Acondicionado"
                style="@style/chipTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aire_acondicionado"/>


            <com.google.android.material.chip.Chip
                android:id="@+id/chip_carpintero"
                style="@style/chipTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carpintero"/>



            <com.google.android.material.chip.Chip
                android:id="@+id/chip_cerrajero"
                style="@style/chipTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cerrajero"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_electricista"
                style="@style/chipTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/electricista"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_herrero_forjador"
                style="@style/chipTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/herrero_forjado"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_jardinero"
                style="@style/chipTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jardinero"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_pintor"
                android:checked="false"
                style="@style/chipTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pintor"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_plomero_fontanero"
                style="@style/chipTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plomero_fontanero"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_service_heladera"
                style="@style/chipTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_heladera"/>

        </com.google.android.material.chip.ChipGroup>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_continuar_dos"
        android:layout_marginBottom="24dp"
        app:cornerRadius="100dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layoutDirection="rtl"
        android:layout_gravity="end|bottom"
        android:gravity="center_vertical"
        app:iconPadding="30dp"
        app:iconGravity="textStart"
        app:icon="@drawable/ic_next_24dp"
        app:iconTint="@color/itemCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continuar"
        android:textColor="@color/itemCheck"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>