<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarPerfilActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:backgroundTint="@color/blancoAla"
            app:liftOnScroll="true"/>

        <View style="@style/divider"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingrese_su_nombre"
                    android:layout_margin="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/id_setNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingrese_su_apellido"
                    android:layout_margin="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/id_setApellido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>


                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingrese_su_telefono"
                    android:layout_margin="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/id_setNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>


                </com.google.android.material.textfield.TextInputLayout>

                <View style="@style/divider"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/seleccione_su_provincia"
                    android:textColor="@color/itemCheck"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinnerProv"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="@color/colorIcons"
                    android:spinnerMode="dialog" />

                <View style="@style/divider"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/seleccione_su_municipio"
                    android:textColor="@color/itemCheck"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinnerDep"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:backgroundTint="@color/colorIcons"
                    android:spinnerMode="dialog" />

                <View style="@style/divider"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/seleccione_su_localidad"
                    android:textColor="@color/itemCheck"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinnerLoc"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:backgroundTint="@color/colorIcons"
                    android:spinnerMode="dialog" />



                <View style="@style/divider"/>


                <androidx.appcompat.widget.AppCompatTextView
                    android:textColor="@color/itemCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/servicio_que_brindara"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_margin="16dp"/>


                <com.google.android.material.chip.ChipGroup
                    android:layout_margin="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:chipSpacing="16dp">


                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_albanil"
                        style="@style/chipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/albanil"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_aire_Acondicionado"
                        style="@style/chipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aire_acondicionado"/>


                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_carpintero"
                        style="@style/chipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/carpintero"/>



                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_cerrajero"
                        style="@style/chipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cerrajero"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_electricista"
                        style="@style/chipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/electricista"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_herrero_forjador"
                        style="@style/chipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/herrero_forjado"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_jardinero"
                        style="@style/chipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jardinero"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_pintor"
                        android:checked="false"
                        style="@style/chipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pintor"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_plomero_fontanero"
                        style="@style/chipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/plomero_fontanero"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_service_heladera"
                        style="@style/chipTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/service_heladera"/>

                </com.google.android.material.chip.ChipGroup>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>