<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/dialog_xml">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/elija_semana_disponible"
            android:textAlignment="center"
            android:textColor="@color/itemCheck"
            android:textSize="18sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:chipSpacingHorizontal="8dp">

                <com.google.android.material.chip.Chip
                    style="@style/chipTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/domingo" />

                <com.google.android.material.chip.Chip
                    style="@style/chipTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lunes" />

                <com.google.android.material.chip.Chip
                    style="@style/chipTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/martes"
                    app:chipEndPadding="5dp"
                    app:chipStartPadding="2dp"/>

                <com.google.android.material.chip.Chip
                    style="@style/chipTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/miercoles"
                    app:chipEndPadding="5dp"
                    app:chipStartPadding="2dp"/>

                <com.google.android.material.chip.Chip
                    style="@style/chipTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jueves" />

                <com.google.android.material.chip.Chip
                    style="@style/chipTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/viernes" />

                <com.google.android.material.chip.Chip
                    style="@style/chipTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sabado" />
            </com.google.android.material.chip.ChipGroup>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="32dp"
            android:text="@string/elija_su_rango_horario"
            android:textAlignment="center"
            android:textColor="@color/itemCheck"
            android:textSize="18sp" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/desde"
                android:textAlignment="center"
                android:textColor="@color/itemCheck"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/hasta"
                android:textAlignment="center"
                android:textColor="@color/itemCheck"
                android:textSize="14sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textTiempo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="8:00"
                android:textAlignment="center"
                android:textSize="36sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="15:00"
                android:textAlignment="center"
                android:textSize="36sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="56dp"
            android:weightSum="1">


            <com.google.android.material.button.MaterialButton
                android:layout_weight="0.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="cancel"
                app:cornerRadius="100dp"
                app:rippleColor="@color/colorIcons"/>


            <com.google.android.material.button.MaterialButton
                android:layout_weight="0.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="Ok"
                app:cornerRadius="100dp"
                app:rippleColor="@color/colorIcons"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.coordinatorlayout.widget.CoordinatorLayout>