<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegistroTresFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/blancoAla"
            app:liftOnScroll="true" />

        <View style="@style/divider" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/seleccione_su_provincia"
            android:textColor="@color/itemCheck"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/colorIcons"
            android:spinnerMode="dialog" />

        <View style="@style/divider" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/seleccione_su_municipio"
            android:textColor="@color/itemCheck"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinnerDep"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/colorIcons"
            android:spinnerMode="dialog" />

        <View style="@style/divider" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/seleccione_su_localidad"
            android:textColor="@color/itemCheck"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinnerLoc"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/colorIcons"
            android:spinnerMode="dialog" />

        <View style="@style/divider" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:layout_marginBottom="24dp"
        android:id="@+id/button_finalizar"
        app:cornerRadius="100dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layoutDirection="rtl"
        android:layout_gravity="end|bottom"
        android:gravity="center_vertical"
        app:iconPadding="30dp"
        app:iconGravity="textStart"
        app:icon="@drawable/ic_next_24dp"
        app:iconTint="@color/itemCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finalizar"
        android:textColor="@color/itemCheck"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>